added some files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="invest.gov.uz_files/fontawesome-all.css">
   <link rel="stylesheet" href="invest.gov.uz_files/bootstrap-grid.css">
   <link rel="stylesheet" href="invest.gov.uz_files/style.css">
+  <link rel="stylesheet" href="invest.gov.uz_files/buxbutton.css">
+  <link rel="stylesheet" href="invest.gov.uz_files/albumprezentatsiya.css">
+</head>
   <title>Buxoro mintaqasi</title>
 
 
@@ -74,6 +77,12 @@
     <div class="container">
       <h1 class="title white">
         Buxoro viloyati iqtisodiy ko'rsatkichlari </h1>
+        <div>
+          <button><a href="./buxstat.docx" download="buxstat.docx">ma'ruza</a></button>
+          <button><a href="./buxstat.xlsx" download="buxstat.xlsx">excel</a></button>
+          <button><a href="./buxstat.pptx" download="buxstat.pptx">prezentatsiya</a></button>
+      
+        </div>
     </div>
   </div>
 
@@ -84,14 +93,129 @@
     <div class="container">
 
       <br><br>
-      <div style="padding: 20px; margin: 20px; width: 100%;">
+      <!-- <div style="padding: 20px; margin: 20px; width: 100%;">
         <iframe
           src="https://1drv.ms/p/c/da23ce48e5a57d04/IQOx5BdUSCRETa_nlZxZohwXAc_FxVqJ2TUx_gvEIjLaDpo?em=2&amp;wdAr=1.3333333333333333&amp;wdEaaCheck=1"
           width="100%" height="600px" frameborder="0">
           <a target="_blank" href="https://office.com">Microsoft Office</a>
           presentation, powered by Saydullayev Akmalxon<a target="_blank"
             href="https://office.com/webapps"></a></iframe>
-      </div>
+      </div> -->
+
+
+
+      <section class="carousel" aria-label="Gallery">
+        <ol class="carousel__viewport">
+          <!-- 1-slayd -->
+          <li id="carousel__slide1"
+              tabindex="0"
+              class="carousel__slide">
+            <div class="carousel__snapper">
+              <img src="./1slide.JPG">
+              <a href="#carousel__slide6"
+                 class="carousel__prev">Go to last slide</a>
+              <a href="#carousel__slide2"
+                 class="carousel__next">Go to next slide</a>
+            </div>
+          </li>
+          <!-- 1-slayd -->
+          <li id="carousel__slide2"
+              tabindex="0"
+              class="carousel__slide">
+            <div class="carousel__snapper">
+              <img src="./2slide.JPG">
+            </div>
+            <a href="#carousel__slide1"
+               class="carousel__prev">Go to previous slide</a>
+            <a href="#carousel__slide3"
+               class="carousel__next">Go to next slide</a>
+          </li>
+          <!-- 1-slayd -->
+          <li id="carousel__slide3"
+              tabindex="0"
+              class="carousel__slide">
+            <div class="carousel__snapper">
+              <img src="./3slide.JPG">
+            </div>
+            <a href="#carousel__slide2"
+               class="carousel__prev">Go to previous slide</a>
+            <a href="#carousel__slide4"
+               class="carousel__next">Go to next slide</a>
+          </li>
+          <!-- 1-slayd -->
+          <li id="carousel__slide4"
+              tabindex="0"
+              class="carousel__slide">
+            <div class="carousel__snapper">
+              <img src="./4slide.JPG">
+            </div>
+            <a href="#carousel__slide3"
+               class="carousel__prev">Go to previous slide</a>
+            <a href="#carousel__slide5"
+               class="carousel__next">Go to first slide</a>
+          </li>
+          <!-- 1-slayd -->
+          <li id="carousel__slide5"
+              tabindex="0"
+              class="carousel__slide">
+            <div class="carousel__snapper">
+              <img src="./5slide.JPG">
+            </div>
+            <a href="#carousel__slide4"
+               class="carousel__prev">Go to previous slide</a>
+            <a href="#carousel__slide6"
+               class="carousel__next">Go to first slide</a>
+          </li>
+          <!-- 1-slayd -->
+          <li id="carousel__slide6"
+              tabindex="0"
+              class="carousel__slide">
+            <div class="carousel__snapper">
+              <img src="./6slide.JPG">
+            </div>
+            <a href="#carousel__slide5"
+               class="carousel__prev">Go to previous slide</a>
+            <a href="#carousel__slide1"
+               class="carousel__next">Go to first slide</a>
+          </li>
+        </ol>
+      <aside class="carousel__navigation">
+          <ol class="carousel__navigation-list">
+            <li class="carousel__navigation-item">
+              <a href="#carousel__slide1"
+                 class="carousel__navigation-button">Go to slide 1</a>
+            </li>
+            <li class="carousel__navigation-item">
+              <a href="#carousel__slide2"
+                 class="carousel__navigation-button">Go to slide 2</a>
+            </li>
+            <li class="carousel__navigation-item">
+              <a href="#carousel__slide3"
+                 class="carousel__navigation-button">Go to slide 3</a>
+            </li>
+            <li class="carousel__navigation-item">
+              <a href="#carousel__slide4"
+                 class="carousel__navigation-button">Go to slide 4</a>
+            </li>
+            <li class="carousel__navigation-item">
+              <a href="#carousel__slide5"
+                 class="carousel__navigation-button">Go to slide 5</a>
+            </li>
+            <li class="carousel__navigation-item">
+              <a href="#carousel__slide6"
+                 class="carousel__navigation-button">Go to slide 6</a>
+            </li>
+            
+          </ol>
+        </aside>
+      </section>
+
+
+
+
+
+
+
       <div class="economy_of_the_region">
         <div class="container">
           <div class="row">
